third_party/WebKit/Source/core/input/ScrollManager.cpp
@@ -131,8 +131,15 @@ void ScrollManager::RecomputeScrollChain(const Node& start_node,
           cur_element == document_element)
         break;
 
-      if (!CanPropagate(scroll_state, *cur_element))
+      if (!CanPropagate(scroll_state, *cur_element)) {
+        // We should add the first node with non-auto overscroll-behavior to
+        // the scroll chain regardlessly, as it's the only node we can latch to.
+        if (scroll_chain.empty() ||
+            scroll_chain.front() != (int)DOMNodeIds::IdForNode(cur_element)) {
+          scroll_chain.push_front(DOMNodeIds::IdForNode(cur_element));
+        }
         break;
+      }
     }
 
     cur_box = cur_box->ContainingBlock();
